add project settings